# contractguard-api

./: .env.test  Docker  pyproject.toml
.github/workflows/: contract-harness.yml
compose/: otel-collector-config.yaml  prometheus.yml  sut.compose.yaml
compose/grafana/dashboards/: dashboard.yaml
migrations/: 001_initial_schema.sql
scripts/: contract-test.sh  policy-check.sh
src/contractguard/: config.py  main.py
src/contractguard/api/: __init__.py  compliance.py
src/contractguard/middleware/: auth.py  tenant.py
